--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "lodash": "^4.17.21",
+    "next": "^11.0.1",
+    "node-sass": "^6.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-device-detect": "^1.17.0",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "7.29.0",
