--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digikala-nextjs",
+  "name": "digikala",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "lodash": "^4.17.21",
-    "next": "^11.0.1",
-    "node-sass": "^6.0.0",
+    "next": "11.0.1",
     "react": "17.0.2",
-    "react-device-detect": "^1.17.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.4"
   }
 }
