--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
