removed console errors

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "swiper": "^6.7.1"
+    "swiper": "^6.7.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
